--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1 id="hi">hello</h1>
-    <button id="button">OK</button>
-    
-
-    <script src="./app.js"></script>
-</body>
+  <head>
+    <link rel="stylesheet" href="./src/stayle.css" />
+    <title>login</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="heading">Login</h1>
+      <form action="" id="form">
+        <input type="text" placeholder="name" class="name" />
+        <input
+          autocomplete="off"
+          type="password"
+          placeholder="password"
+          class="password"
+        />
+        <div class="div">
+          <div>
+            <p><input type="checkbox" class="chk" name="" id="" />Remeber me</p>
+          </div>
+          <a href="">Forgot Password?</a>
+        </div>
+      </form>
+      <button class="log-btn">Login</button>
+      <p>Dont have an account? <a href="./SignIn.html">Register</a></p>
+    </div>
+    <script src="./src/index.js"></script>
+  </body>
 </html>
